--- a/lib/GUI/css/styles.less
+++ b/lib/GUI/css/styles.less
@@ -17,18 +17,24 @@
   margin: 0;
   padding: 0;
 
-  .git-logo {
+  .icon {
       min-width: 18px;
       max-width: 18px;
       min-height: 18px;
       max-height: 18px;
-      background-image: url(./GIT_icon.svg);
       background-repeat: no-repeat;
       background-position: center center;
       background-size: contain;
       display: inline-block;
   }
 
+  .icon.git-logo {
+      background-image: url(./GIT_icon.svg);
+  }
+
+  .icon.documentation-logo {
+      background-image: url(./doc_icon.svg);
+  }
   .clipboard {
     cursor: pointer;
   }
