--- a/lib/GUI/entry.hbs
+++ b/lib/GUI/entry.hbs
@@ -4,12 +4,19 @@
       <h4 class="title">
         <a class='name icon-angle-right red' href='javascript:void(0)'>{{ name }}</a>
         <small class='version'>v{{ version }}</small>
+        
+        {{#if doc._hasIndex}}
+          <a target="_blank" href="/-/doc/{{ nameUrlEncoded }}/index.html" class="align-bottom icon documentation-logo"><br></a>
+        {{/if}}
+
         {{#if repository.url}}
-        <a target="_blank" href="{{ repository.url }}" class="align-bottom git-logo"><br></a>
+        <a target="_blank" href="{{ repository.url }}" class="align-bottom icon git-logo"><br></a>
+
 
         <svg class="clipboard align-bottom" data-clipboard-text="{{ repository.url }}" aria-hidden="true" height="18" version="1.1" viewBox="0 0 16 18" >
          <path d="M2 13h4v1H2v-1zm5-6H2v1h5V7zm2 3V8l-3 3 3 3v-2h5v-2H9zM4.5 9H2v1h2.5V9zM2 12h2.5v-1H2v1zm9 1h1v2c-.02.28-.11.52-.3.7-.19.18-.42.28-.7.3H1c-.55 0-1-.45-1-1V4c0-.55.45-1 1-1h3c0-1.11.89-2 2-2 1.11 0 2 .89 2 2h3c.55 0 1 .45 1 1v5h-1V6H1v9h10v-2zM2 5h8c0-.55-.45-1-1-1H8c-.55         0-1-.45-1-1s-.45-1-1-1-1 .45-1 1-.45 1-1 1H3c-.55 0-1 .45-1 1z"></path></svg>
         {{/if}}
+
       </h4>
     </div>
     <div class="col-md-4 col-sm-4">
