--- a/lib/static/main.css
+++ b/lib/static/main.css
@@ -7232,16 +7232,21 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
   margin: 0;
   padding: 0;
 }
-.body .git-logo {
+.body .icon {
   min-width: 18px;
   max-width: 18px;
   min-height: 18px;
   max-height: 18px;
-  background-image: url(GIT_icon.svg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
   display: inline-block;
+}
+.body .icon.git-logo {
+  background-image: url(GIT_icon.svg);
+}
+.body .icon.documentation-logo {
+  background-image: url(doc_icon.svg);
 }
 .body .clipboard {
   cursor: pointer;
